compiler/testData/diagnostics/testsWithJsStdLib/jvmDeclarations/cloneable.kt
// RUN_PIPELINE_TILL: FRONTEND
import kotlin.<!UNRESOLVED_IMPORT!>Cloneable<!>

fun cloneable(): <!UNRESOLVED_REFERENCE!>Cloneable<!> = intArrayOf(42)
